// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BillingPlans component should display matching current plan 1`] = `
<div
  className="mb-4"
>
  <h4>
    Plans
  </h4>
  <Row
    className="mb-3"
    tag="div"
  >
    <Col
      sm="12"
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      <CardDeck
        tag="div"
      >
        <Card
          className="text-center"
          outline={true}
          tag="div"
        >
          <CardBlock
            tag="div"
          >
            <CardTitle
              tag="h4"
            >
              my plan
            </CardTitle>
            <div
              className="mb-4 mt-3"
            >
              <h3>
                <em>
                  $
                </em>
              </h3>
              per 
            </div>
            <div>
              <strong>
                Includes:
              </strong>
            </div>
            <div>
              Unlimited agents
            </div>
            <div>
              <strong>
                100
              </strong>
               tickets included
            </div>
            <div>
              <span>
                <strong>
                  + 
                  $
                  NaN
                </strong>
                 per 
                100
                 tickets 
              </span>
              <a
                id="additional-tickets-tooltip-plan1"
              >
                <i
                  className="fa fa-question-circle"
                />
              </a>
              <Tooltip
                delay={0}
                target="additional-tickets-tooltip-plan1"
              >
                If you reply to more tickets than included in your plan this is the additional cost per 100 tickets.
              </Tooltip>
            </div>
            <div
              className="mb-3"
            >
              <strong>
                10
              </strong>
               integrations
            </div>
            <Button
              className=""
              color="info"
              disabled={false}
              onClick={[Function]}
              outline={true}
              tag="button"
            >
              Choose my plan
            </Button>
          </CardBlock>
        </Card>
        <Card
          className="text-center"
          outline={true}
          tag="div"
        >
          <CardBlock
            tag="div"
          >
            <CardTitle
              tag="h4"
            >
              Enterprise Plan
            </CardTitle>
            <div
              className="mb-4 mt-3"
            >
              <h3>
                Contact us
              </h3>
              Billed annually
            </div>
            <div>
              <strong>
                Includes:
              </strong>
            </div>
            <div>
              Unlimited agents
            </div>
            <div>
              Discounted prices for volumes of 
              <strong>
                10,000+
              </strong>
               tickets.
            </div>
            <div
              className="mb-3"
            >
              Premium support
            </div>
            <Button
              color="info"
              onClick={[Function]}
              outline={true}
              tag="button"
            >
              Contact Us
            </Button>
          </CardBlock>
        </Card>
      </CardDeck>
    </Col>
  </Row>
  <div>
    <p>
      <strong>
        Are all tickets counted? What about spam?
      </strong>
    </p>
    We bill for a ticket only if your team uses Gorgias to send replies to customers. Specifically we bill you if the ticket:
    <ul>
      <li>
        Has at least 1 reply sent using the helpdesk by a team member (agent).
      </li>
      <li>
        Or is sent using an automatic reply (using the Rules).
      </li>
    </ul>
    <p>
      <strong>
        Note:
      </strong>
       Tickets that are imported into Gorgias from Facebook, Gmail, etc.. are not billed.
    </p>
  </div>
</div>
`;

exports[`BillingPlans component should display multiple plans 1`] = `
<div
  className="mb-4"
>
  <h4>
    Plans
  </h4>
  <Row
    className="mb-3"
    tag="div"
  >
    <Col
      sm="12"
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      <CardDeck
        tag="div"
      >
        <Card
          className="text-center"
          outline={true}
          tag="div"
        >
          <CardBlock
            tag="div"
          >
            <CardTitle
              tag="h4"
            >
              my plan
            </CardTitle>
            <div
              className="mb-4 mt-3"
            >
              <h3>
                <em>
                  $
                </em>
              </h3>
              per 
            </div>
            <div>
              <strong>
                Includes:
              </strong>
            </div>
            <div>
              Unlimited agents
            </div>
            <div>
              <strong>
                100
              </strong>
               tickets included
            </div>
            <div>
              <span>
                <strong>
                  + 
                  $
                  NaN
                </strong>
                 per 
                100
                 tickets 
              </span>
              <a
                id="additional-tickets-tooltip-plan1"
              >
                <i
                  className="fa fa-question-circle"
                />
              </a>
              <Tooltip
                delay={0}
                target="additional-tickets-tooltip-plan1"
              >
                If you reply to more tickets than included in your plan this is the additional cost per 100 tickets.
              </Tooltip>
            </div>
            <div
              className="mb-3"
            >
              <strong>
                10
              </strong>
               integrations
            </div>
            <Button
              className=""
              color="info"
              disabled={false}
              onClick={[Function]}
              outline={true}
              tag="button"
            >
              Choose my plan
            </Button>
          </CardBlock>
        </Card>
        <Card
          className="text-center"
          outline={true}
          tag="div"
        >
          <CardBlock
            tag="div"
          >
            <CardTitle
              tag="h4"
            >
              my second plan
            </CardTitle>
            <div
              className="mb-4 mt-3"
            >
              <h3>
                <em>
                  $
                </em>
              </h3>
              per 
            </div>
            <div>
              <strong>
                Includes:
              </strong>
            </div>
            <div>
              Unlimited agents
            </div>
            <div>
              <strong>
                1000
              </strong>
               tickets included
            </div>
            <div>
              <span>
                <strong>
                  + 
                  $
                  NaN
                </strong>
                 per 
                100
                 tickets 
              </span>
              <a
                id="additional-tickets-tooltip-plan2"
              >
                <i
                  className="fa fa-question-circle"
                />
              </a>
              <Tooltip
                delay={0}
                target="additional-tickets-tooltip-plan2"
              >
                If you reply to more tickets than included in your plan this is the additional cost per 100 tickets.
              </Tooltip>
            </div>
            <div
              className="mb-3"
            >
              <strong>
                100
              </strong>
               integrations
            </div>
            <Button
              className=""
              color="info"
              disabled={false}
              onClick={[Function]}
              outline={true}
              tag="button"
            >
              Choose my second plan
            </Button>
          </CardBlock>
        </Card>
        <Card
          className="text-center"
          outline={true}
          tag="div"
        >
          <CardBlock
            tag="div"
          >
            <CardTitle
              tag="h4"
            >
              Enterprise Plan
            </CardTitle>
            <div
              className="mb-4 mt-3"
            >
              <h3>
                Contact us
              </h3>
              Billed annually
            </div>
            <div>
              <strong>
                Includes:
              </strong>
            </div>
            <div>
              Unlimited agents
            </div>
            <div>
              Discounted prices for volumes of 
              <strong>
                10,000+
              </strong>
               tickets.
            </div>
            <div
              className="mb-3"
            >
              Premium support
            </div>
            <Button
              color="info"
              onClick={[Function]}
              outline={true}
              tag="button"
            >
              Contact Us
            </Button>
          </CardBlock>
        </Card>
      </CardDeck>
    </Col>
  </Row>
  <div>
    <p>
      <strong>
        Are all tickets counted? What about spam?
      </strong>
    </p>
    We bill for a ticket only if your team uses Gorgias to send replies to customers. Specifically we bill you if the ticket:
    <ul>
      <li>
        Has at least 1 reply sent using the helpdesk by a team member (agent).
      </li>
      <li>
        Or is sent using an automatic reply (using the Rules).
      </li>
    </ul>
    <p>
      <strong>
        Note:
      </strong>
       Tickets that are imported into Gorgias from Facebook, Gmail, etc.. are not billed.
    </p>
  </div>
</div>
`;

exports[`BillingPlans component should load with empty props 1`] = `
<BillingPlans
  currentPlanId="some-plan"
  isAllowedToChangePlan={[Function]}
  notify={[Function]}
  plans={
    Immutable.Map {
    }
  }
  subscription={
    Immutable.Map {
    }
  }
  updateSubscription={[Function]}
>
  <div
    className="mb-4"
  >
    <h4>
      Plans
    </h4>
    <Row
      className="mb-3"
      tag="div"
    >
      <div
        className="mb-3 row"
      >
        <Col
          sm="12"
          tag="div"
          widths={
            Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ]
          }
        >
          <div
            className="col col-sm-12"
          >
            <CardDeck
              tag="div"
            >
              <div
                className="card-deck"
              >
                <Card
                  className="text-center"
                  outline={true}
                  tag="div"
                >
                  <div
                    className="text-center card"
                  >
                    <CardBlock
                      tag="div"
                    >
                      <div
                        className="card-block"
                      >
                        <CardTitle
                          tag="h4"
                        >
                          <h4
                            className="card-title"
                          >
                            Enterprise Plan
                          </h4>
                        </CardTitle>
                        <div
                          className="mb-4 mt-3"
                        >
                          <h3>
                            Contact us
                          </h3>
                          Billed annually
                        </div>
                        <div>
                          <strong>
                            Includes:
                          </strong>
                        </div>
                        <div>
                          Unlimited agents
                        </div>
                        <div>
                          Discounted prices for volumes of 
                          <strong>
                            10,000+
                          </strong>
                           tickets.
                        </div>
                        <div
                          className="mb-3"
                        >
                          Premium support
                        </div>
                        <Button
                          color="info"
                          onClick={[Function]}
                          outline={true}
                          tag="button"
                        >
                          <button
                            className="btn btn-outline-info"
                            onClick={[Function]}
                            type="button"
                          >
                            Contact Us
                          </button>
                        </Button>
                      </div>
                    </CardBlock>
                  </div>
                </Card>
              </div>
            </CardDeck>
          </div>
        </Col>
      </div>
    </Row>
    <div>
      <p>
        <strong>
          Are all tickets counted? What about spam?
        </strong>
      </p>
      We bill for a ticket only if your team uses Gorgias to send replies to customers. Specifically we bill you if the ticket:
      <ul>
        <li>
          Has at least 1 reply sent using the helpdesk by a team member (agent).
        </li>
        <li>
          Or is sent using an automatic reply (using the Rules).
        </li>
      </ul>
      <p>
        <strong>
          Note:
        </strong>
         Tickets that are imported into Gorgias from Facebook, Gmail, etc.. are not billed.
      </p>
    </div>
  </div>
</BillingPlans>
`;
